--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/node,code
 # Edit at https://www.toptal.com/developers/gitignore?templates=node,code
 
@@ -135,4 +134,4 @@ tmp/
 temp/
 
 # End of https://www.toptal.com/developers/gitignore/api/node,code
-
+.envrc
