--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^15.0.1",
+    "@types/puppeteer": "^5.4.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "dev": "ts-node main.ts"
+    "build": "tsc",
+    "dev": "ts-node -O '{ \"module\": \"commonjs\" }' main.ts"
+  },
+  "dependencies": {
+    "puppeteer": "^9.0.0"
   }
 }
