--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "devDependencies": {
     "@types/node": "^15.0.1",
     "@types/puppeteer": "^5.4.3",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node -O '{ \"module\": \"commonjs\" }' main.ts"
+    "dev": "ts-node -O '{ \"module\": \"commonjs\" }' main.ts",
+    "predev": "rimraf -rf screenshot/*.png"
   },
   "dependencies": {
     "puppeteer": "^9.0.0"
